Add navbar to the homepage

--- a/src/app/components/main/main.component.html
+++ b/src/app/components/main/main.component.html
@@ -7,7 +7,17 @@
 </head>
 <body>
     <div class="container">
-        <div class="row navbar"></div>
+        <div class="row navbar-container">
+            <div class="col-md-12">
+                <nav class="navbar navbar-dark bg-dark">
+                    <a class="navbar-brand" href="#">
+                        <i class="fa fa-github-square fa-fw d-inline-block align-top " style="font-size: 25px;"></i>
+                    Github View
+                    </a>
+                </nav>
+            </div>
+
+        </div>
         <div class="row main-conent"></div>
         <div class="row footer"></div>
 
