--- a/src/app/components/pageview/pageview.component.html
+++ b/src/app/components/pageview/pageview.component.html
@@ -1,3 +1,5 @@
 <div class="page-view mt-5">
-
+    
+    <img src="{{users.avatar_url}}" alt="" height="250px" width="250px">
+    <p class="mt-3"> {{users.name}} </p>
 </div>
