--- a/src/app/components/pageview/pageview.component.html
+++ b/src/app/components/pageview/pageview.component.html
@@ -1,5 +1,16 @@
 <div class="page-view mt-5">
+    <div class="row">
+        <div class="col-md-3">
+            <img src="{{users.avatar_url}}" alt="" height="250px" width="250px">
+            <p class="mt-3"> {{users.name}} </p>
+        </div>
+        <div class="col-md-8">
+            <div class="repo-info-container" *ngFor = 'let repo of repolist |async'>
+                
+                <li><h5>{{repo.name}}</h5></li>
+                
+            </div>
+        </div>
+    </div>
     
-    <img src="{{users.avatar_url}}" alt="" height="250px" width="250px">
-    <p class="mt-3"> {{users.name}} </p>
 </div>
