--- a/src/app/components/pageview/pageview.component.html
+++ b/src/app/components/pageview/pageview.component.html
@@ -5,9 +5,9 @@
             <p class="mt-3"> {{users.name}} </p>
         </div>
         <div class="col-md-8">
-            <div class="repo-info-container" *ngFor = 'let repo of repolist |async'>
+            <div class="repo-info-container card-deck" *ngFor = 'let repo of repolist |async'>
                 
-                <li><h5>{{repo.name}}</h5></li>
+               <div class="card bg-success mb-1 text-white"> <h5> <a routerLink ="repo/{{repo.id}}">{{repo.name}}</a></h5></div>
                 
             </div>
         </div>
